Fixed jumpiness which was being experienced when fluid font would be made rigid.

--- a/resources/typography.css
+++ b/resources/typography.css
@@ -1,4 +1,4 @@
-@media (max-width: 24.99em)
+@media (max-width: 25em)
 {
     html {
         font-size: 1rem;
@@ -25,35 +25,35 @@
 @media (min-width: 25em) and (max-width: 62.5em)
 {
     html {
-        font-size: calc(1em + (1.5 - 1) * (100vw - 25em)/(62-25));
+        font-size: calc(1em + (1.5 - 1) * (100vw - 25em)/(62.5 - 25));
     }
 
 h1 {
-     font-size: calc(1.602em + (2.441 - 1.602) * (100vw - 25em)/(62.5-25));/
+     font-size: calc(1.602em + (2.441 - 1.602) * (100vw - 25em)/(62.5 - 25));/
     line-height: 1.25em;
 }
 
 h2 {
-    font-size: calc(1.424em + (1.953 - 1.424) * (100vw - 25em)/(62.5-25));
+    font-size: calc(1.424em + (1.953 - 1.424) * (100vw - 25em)/(62.5 - 25));
     line-height: 1.15284615em;
 
 }
 
 h3 {
-    font-size: calc(1.266em + (1.563 - 1.266) * (100vw - 25em)/(62.5-25));
+    font-size: calc(1.266em + (1.563 - 1.266) * (100vw - 25em)/(62.5 - 25));
     line-height: 1.13636364em;
 }
 
 h4 {
-    font-size: calc(1.125em + (1.250 - 1.125) * (100vw - 25em)/(62.5-25));
+    font-size: calc(1.125em + (1.250 - 1.125) * (100vw - 25em)/(62.5 - 25));
     line-height: 1.11111111em;
 }
 
 }
 
-@media (min-width: 63em) {
+@media (min-width: 62.5em) {
     html {
-        font-size: 1.5rem;
+        font-size: 24px;
     }
 }
 
